Jamie revert (#71)
* init route and controller

* finish search citizen

* finish search message

* register search route

* add msg & user dao test

* fix message query fault

* change userDAO func name

* fix test naming

* initial test setting

* search rule tests added

* search router test TODO

* tests all added

* search tests finished

* revert some changes

* backend finished

* changes

* backend tests finished

* Merge branch 'main' of https://github.com/cmusv-fse/18652-fse-f23-group-project-sb-1 into search-backend

* finished v1

* frontend ui fixed

* waitlist icon added on home page

---------
