# Backend/public/swagger.json
@@ -107,6 +107,29 @@
         "type": "object",
         "additionalProperties": false
       },
+      "waitlistUser": {
+        "properties": {
+          "username": {
+            "type": "string"
+          },
+          "foodComments": {
+            "type": "string"
+          }
+        },
+        "required": ["username","foodComments"],
+        "type": "object",
+        "additionalProperties": false
+      },
+      "updateWaitlistUserInfo": {
+        "properties": {
+          "username": {
+            "type": "string"
+          },
+          "foodDonor": {
+            "type": "string"
+          }
+        },
+        "required": ["username","foodDonor"],
       "Schedule": {
         "properties": {
           "scheduleid": {
@@ -322,32 +345,41 @@
     },
     "/api/messages/:sendee": {
       "get": {
-        "operationId": "get all unread messages for sendee",
+        "operationId": "search for informations",
         "responses": {
           "200": {
-            "description": "GetMessages"
+            "description": "Return the search result"
           },
-          "content": {
-            "application/json": {
-              "schema": {
-                "items": {
-                  "$ref": "#/components/schemas/Message"
-                },
-                "type": "array"
-              }
-            }
+          "400": {
+            "description": "Invalid search request"
           }
         },
-        "description": "get all unread messages for sendee",
+        "description": "search for informations",
         "security": [],
         "parameters": [
           {
             "required": true,
-            "schema": {
-              "type": "string"
-            },
-            "name": "sendee",
+            "schema": { "type": "string" },
+            "name": "context",
             "in": "path"
+          },
+          {
+            "required": true,
+            "schema": { "type": "string" },
+            "name": "criteria",
+            "in": "query"
+          },
+          {
+            "required": false,
+            "schema": { "type": "string" },
+            "name": "sender",
+            "in": "query"
+          },
+          {
+            "required": false,
+            "schema": { "type": "string" },
+            "name": "sendee",
+            "in": "query"
           }
         ]
       }
@@ -669,6 +701,119 @@
       ]
     }
   },
+  "/api/foodWaitlist/allCitizens": {
+    "get": {
+      "operationId": "get the user info on the waitlist",
+      "responses": {
+        "200": {
+          "description": "get user info from FoodWaitlist"
+        }
+      },
+      "content":{
+        "application/json": {
+          "schema": {
+            "$ref": "#/components/schemas/waitlistUser"
+          }
+        }
+      },
+      "description": "get the user info on the waitlist",
+      "security": [],
+      "parameters": [
+        {
+          "required": true,
+          "schema": {
+            "type": "string"
+          },
+          "name": "citizen",
+          "in": "path"
+        }
+      ]
+    }
+  },
+  "/api/foodWaitlist/:citizen": {
+    "post": {
+      "operationId": "join the waitlist",
+      "responses": {
+        "200": {
+          "description": "joinFoodWaitlist"
+        }
+      },
+      "content":{
+        "application/json": {
+          "schema": {
+            "$ref": "#/components/schemas/waitlistUser"
+          }
+        }
+      },
+      "description": "join the waitlist",
+      "security": [],
+      "parameters": [
+        {
+          "required": true,
+          "schema": {
+            "type": "string"
+          },
+          "name": "citizen",
+          "in": "path"
+        }
+      ]
+    },
+    "put": {
+      "operationId": "update the user's donor and status on the waitlist",
+      "responses": {
+        "200": {
+          "description": "updateStatusOnFoodWaitlist"
+        }
+      },
+      "content":{
+        "application/json": {
+          "schema": {
+            "$ref": "#/components/schemas/updateWaitlistUserInfo"
+          }
+        }
+      },
+      "description": "update the user's donor and status on the waitlist",
+      "security": [],
+      "parameters": [
+        {
+          "required": true,
+          "schema": {
+            "type": "string"
+          },
+          "name": "citizen",
+          "in": "path"
+        }
+      ]
+    },
+    "delete": {
+      "operationId": "delete individual user info on the waitlist",
+      "responses": {
+        "200": {
+          "description": "delete individual user info from FoodWaitlist"
+        }
+      },
+      "content":{
+        "application/json": {
+          "schema": {
+            "$ref": "#/components/schemas/waitlistUser"
+          }
+        }
+      },
+      "description": "delete individual user info on the waitlist",
+      "security": [],
+      "parameters": [
+        {
+          "required": true,
+          "schema": {
+            "type": "string"
+          },
+          "name": "citizen",
+          "in": "path"
+        }
+      ]
+    }
+  }
+},
   "servers": [
     {
       "url": "/"
